--- a/src/main/resources/properties/base.properties
+++ b/src/main/resources/properties/base.properties
@@ -1,15 +1,15 @@
-# mysql ≈‰÷√
+
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/ssm?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=admin
 
-# Ã⁄—∂‘∆
+
 tencent.yundisk.username=root
 tencent.yundisk.password=admin
 
-# ¥Ê¥¢Œª÷√
 video.store.path=F:\\store
+video.ffmpeg.merge.timeout=20000
 
 
 
